freest/test/prog/Invalid/Scoping/MultipleFieldDecls/MultipleFieldDecls.fst
module MultipleFieldDecls where

type T : 1S
type T = +{A: Skip, A: Skip}
